            presently uses the same version number, 2.15.0, as the
            version of R on which it is based. This allows 
            checks for feature availability to continue to work.
            This scheme will likely change in the future.
    } 
  }

  \subsection{NEW FEATURES}{
    \itemize{
      \item **1
      \item **2
      \item **3
      \item **4
      \item **5
      \item **6
      \item **7
      \item **8
      \item **9
      \item **10
      \item **11
      \item **12
      \item **13
      \item **14
      \item **15
      \item **16
      \item **17
      \item **18
      \item **19
      \item **20
      \item **21
      \item **22
      \item **23
      \item **24
      \item **25
      \item **26
      \item **27
      \item **28
      \item **29
      \item **30
      \item **31
      \item **32
      \item **33
      \item **34
      \item **35
      \item **36
      \item **37
      \item **38
      \item **39
      \item **40
      \item **41
      \item **42
      \item **43
      \item **44
      \item **45
      \item **46
      \item **47
      \item **48
      \item **49
      \item **50
    }
  }

  \subsection{PERFORMANCE IMPROVEMENTS}{
    \itemize{
      \item **1
      \item **2
      \item **3
      \item **4
      \item **5
      \item **6
      \item **7
      \item **8
      \item **9
      \item **10
      \item **11
      \item **12
      \item **13
      \item **14
      \item **15
      \item **16
      \item **17
      \item **18
      \item **19
      \item **20
      \item **21
      \item **22
      \item **23
      \item **24
      \item **25
      \item **26
      \item **27
      \item **28
      \item **29
      \item **30
      \item **31
      \item **32
      \item **33
      \item **34
      \item **35
      \item **36
      \item **37
      \item **38
      \item **39
      \item **40
      \item **41
      \item **42
      \item **43
      \item **44
      \item **45
      \item **46