@@ -1,0 +1,3 @@
+New pnamedcnt primitive function for printing named field of object.
+
+See NEWS entry for details.
