@@ -120,6 +120,7 @@ assign("nzchar", function(x) NULL, envir = .ArgsEnv)
 assign("oldClass", function(x) NULL, envir = .ArgsEnv)
 assign("oldClass<-", function(x, value) NULL, envir = .ArgsEnv)
 assign("on.exit", function(expr = NULL, add = FALSE) NULL, envir = .ArgsEnv)
+assign("pnamedcnt", function(x,...) NULL, envir = .ArgsEnv)
 assign("pos.to.env", function(x) NULL, envir = .ArgsEnv)
 assign("proc.time", function() NULL, envir = .ArgsEnv)
 assign("quote", function(expr) NULL, envir = .ArgsEnv)
